# chaostoolkit-aws-mcp-server

./: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  run_server.py
examples/: example_usage.py
src/chaostoolkit_aws_mcp_server/: __init__.py  server.py
tests/: __init__.py  test_new_tools.py  test_server.py
